--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
   "dependencies": {
     "@apollo/client": "^3.13.8",
     "@tailwindcss/vite": "^4.1.11",
+    "clsx": "^2.1.1",
     "graphql": "^16.11.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^4.0.1",
@@ -31,6 +33,8 @@
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.5.2",
+    "@vitest/browser": "3.2.4",
+    "@vitest/coverage-v8": "3.2.4",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.29.0",
     "eslint-plugin-react-hooks": "^5.2.0",
@@ -38,15 +42,13 @@
     "eslint-plugin-storybook": "^9.0.15",
     "globals": "^16.2.0",
     "jsdom": "^26.1.0",
+    "playwright": "^1.53.2",
     "postcss": "^8.5.6",
     "storybook": "^9.0.15",
     "tailwindcss": "^4.1.11",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.34.1",
     "vite": "^7.0.0",
-    "vitest": "^3.2.4",
-    "@vitest/browser": "3.2.4",
-    "playwright": "^1.53.2",
-    "@vitest/coverage-v8": "3.2.4"
+    "vitest": "^3.2.4"
   }
 }
