--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.13.8",
+    "@graphql-tools/schema": "^10.0.23",
     "@tailwindcss/vite": "^4.1.11",
     "clsx": "^2.1.1",
     "graphql": "^16.11.0",
